--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 *~
-ChangeLog
-INSTALL
-Makefile.in
-Makefile
-aclocal.m4
+/aclocal.m4
 /autom4te.cache
+/build-stamp
+/ChangeLog
 /config
-/configure
 /config.log
+/config.guess
 /config.status
+/config.sub
+/configure
+/debian/files
+/debian/vyatta-op
 /etc/default/vyatta
+/INSTALL
+/Makefile.in
+/Makefile
