--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Standards-Version: 3.7.2
 
 Package: vyatta-op
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: bash, sed, procps, coreutils
+Suggests: util-linux, net-tools, ethtool, ncurses-bin, ntpdate
 Description: bash operational command completion
  Vyatta operational command bash completion script and base templates
