--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: vyatta-op
-Section: net
+Section: contrib/net
 Priority: extra
 Maintainer: Tom Grennan <tgrennan@vyatta.com>
 Build-Depends: debhelper (>= 5), autotools-dev
@@ -7,7 +7,14 @@ Standards-Version: 3.7.2
 
 Package: vyatta-op
 Architecture: all
-Depends: bash, sed, procps, coreutils
-Suggests: util-linux, net-tools, ethtool, ncurses-bin, ntpdate
+Depends: bash (>= 3.1),
+ sed (>= 4.1.5),
+ procps (>= 1:3.2.7-3),
+ coreutils (>= 5.97-5.3)
+Suggests: util-linux (>= 2.13-5),
+ net-tools,
+ ethtool,
+ ncurses-bin (>= 5.5-5),
+ ntpdate
 Description: bash operational command completion
  Vyatta operational command bash completion script and base templates
