consolidate show_interfaces* scripts with vyatta-show-interfaces

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,13 +4,7 @@ completiondir	 = /etc/bash_completion.d
 completion_DATA	 = etc/bash_completion.d/vyatta-op
 opdir		 = $(datadir)/vyatta-op/templates
 
-bin_SCRIPTS	 = scripts/show_interfaces
-bin_SCRIPTS	+= scripts/show_interfaces_ethernet
-bin_SCRIPTS	+= scripts/show_interfaces_loopback
-bin_SCRIPTS	+= scripts/show_interfaces_statistics
-bin_SCRIPTS	+= scripts/show_interfaces_summary
-bin_SCRIPTS	+= scripts/show_interfaces_system
-bin_SCRIPTS	+= scripts/show_interfaces_tunnel
+bin_SCRIPTS	 = scripts/vyatta-show-interfaces
 bin_SCRIPTS	+= scripts/show_version
 
 cpiop = find  . ! -regex '\(.*~\|.*\.bak\|.*\.swp\|.*\#.*\#\)' -print0 | \
