rename bash completion script to enforce ordering.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 defaultdir	 = /etc/default
 default_DATA	 = etc/default/vyatta
 completiondir	 = /etc/bash_completion.d
-completion_DATA	 = etc/bash_completion.d/vyatta-op
+completion_DATA	 = etc/bash_completion.d/10vyatta-op
 opdir		 = $(datadir)/vyatta-op/templates
 
 bin_SCRIPTS	 = scripts/vyatta-show-interfaces
