add tech-support command

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,9 @@ completiondir	 = /etc/bash_completion.d
 completion_DATA	 = etc/bash_completion.d/10vyatta-op
 opdir		 = $(datadir)/vyatta-op/templates
 
+funcdir		 = $(datadir)/vyatta-op/functions
+func_DATA = functions/tech-support
+
 bin_SCRIPTS	 = scripts/vyatta-show-interfaces
 bin_SCRIPTS	+= scripts/vyatta-show-version
 
