--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,10 @@ completion_DATA	 = etc/bash_completion.d/10vyatta-op
 opdir		 = $(datadir)/vyatta-op/templates
 
 funcdir		 = $(datadir)/vyatta-op/functions
-func_DATA = functions/tech-support
+func_DATA	 = functions/tech-support
+
+alloweddir	 = $(datadir)/vyatta-op/functions/allowed
+allowed_DATA	 = functions/allowed/hosts
 
 bin_SCRIPTS	 = scripts/vyatta-show-interfaces
 bin_SCRIPTS	+= scripts/vyatta-show-version
