--- a/debian/control
+++ b/debian/control
@@ -9,12 +9,12 @@ Package: vyatta-op
 Architecture: all
 Depends: bash (>= 3.1),
  sed (>= 4.1.5),
+ ethtool,
+ ntpdate,
  procps (>= 1:3.2.7-3),
  coreutils (>= 5.97-5.3)
 Suggests: util-linux (>= 2.13-5),
  net-tools,
- ethtool,
  ncurses-bin (>= 5.5-5),
- ntpdate
 Description: bash operational command completion
  Vyatta operational command bash completion script and base templates
