--- a/etc/default/vyatta.in
+++ b/etc/default/vyatta.in
@@ -146,15 +146,7 @@ unset _vyatta_extglob
 
 } 2>/dev/null || :
 
-export VYATTA_ACTIVE_CONFIGURATION_DIR=${vyatta_configdir}/active
-export VYATTA_CHANGES_ONLY_DIR=${vyatta_configdir}/tmp/changes_only_$$
-export VYATTA_TEMP_CONFIG_DIR=${vyatta_configdir}/tmp/new_config_$$
-export VYATTA_CONFIG_TMP=${vyatta_configdir}/tmp/tmp_$$
-export VYATTA_CONFIG_TEMPLATE=$vyatta_cfg_templates
-export VYATTA_EDIT_LEVEL=/
-export VYATTA_TEMPLATE_LEVEL=/
-export VYATTA_TAG_NAME=node.tag
-export VYATTA_MOD_NAME=.modified
+[ -r /etc/default/vyatta-cfg ] && source /etc/default/vyatta-cfg
 
 ###  Local Variables:
 ###  mode: shell-script
