--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,8 @@ Depends: bash (>= 3.1),
  ethtool,
  ntpdate,
  procps (>= 1:3.2.7-3),
+ pciutils,
+ lsof,
  coreutils (>= 5.97-5.3)
 Suggests: util-linux (>= 2.13-5),
  net-tools,
