add wrappers/symlinks for pipe commands (wrappers are needed for command matching in restricted modes).

--- a/debian/vyatta-op.postrm.in
+++ b/debian/vyatta-op.postrm.in
@@ -9,5 +9,9 @@ if [ "$1" = "purge" ]; then
   rm -f ${bindir}/sudo-users/ethtool
   rm -f ${bindir}/sudo-users/dmidecode
   rm -f ${bindir}/sudo-users/iptables
+  rm -f /usr/bin/count
+  rm -f /usr/bin/match
+  rm -f /usr/bin/no-match
+  rm -f /usr/bin/no-more
 fi
 
