--- a/debian/vyatta-op.postinst.in
+++ b/debian/vyatta-op.postinst.in
@@ -8,4 +8,8 @@ bindir=@bindir@
 ln -sf /usr/sbin/ethtool ${bindir}/sudo-users/ethtool
 ln -sf /usr/sbin/dmidecode ${bindir}/sudo-users/dmidecode
 ln -sf /sbin/iptables ${bindir}/sudo-users/iptables
+ln -sf ${bindir}/count /usr/bin/
+ln -sf ${bindir}/match /usr/bin/
+ln -sf ${bindir}/no-match /usr/bin/
+ln -sf ${bindir}/no-more /usr/bin/
 
