--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,7 @@ allowed_DATA	 = functions/allowed/hosts
 
 bin_SCRIPTS	 = scripts/vyatta-show-interfaces
 bin_SCRIPTS	+= scripts/vyatta-show-version
+bin_SCRIPTS     += scripts/vyatta-show-dhclient.pl
 
 bin_sudo_users_SCRIPTS = scripts/vyatta-show-log
 bin_sudo_users_SCRIPTS += scripts/vyatta-show-log-all
