- Fix bug 776: need "clear interface" command to clear counters - Fix bug 1095: Enhancement Request: "Show interface brief" command - Change default to "brief" if multiple interfaces can be shown - Add "detail" for nodes defaulting to brief - Add "brief" for nodes defaulting to detail - Fix vif completions that wasn't working - Remove ethtool can on vlans since it doesn't work

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,7 @@ alloweddir	 = $(datadir)/vyatta-op/functions/allowed
 allowed_DATA	 = functions/allowed/hosts
 
 bin_SCRIPTS	 = scripts/vyatta-show-interfaces
+bin_SCRIPTS	+= scripts/vyatta-show-interfaces.pl
 bin_SCRIPTS	+= scripts/vyatta-show-version
 bin_SCRIPTS     += scripts/vyatta-show-dhclient.pl
 
