--- a/debian/vyatta-op.postinst.in
+++ b/debian/vyatta-op.postinst.in
@@ -8,4 +8,4 @@ bindir=@bindir@
 ln -sf /usr/sbin/ethtool ${bindir}/sudo-users/ethtool
 ln -sf /usr/sbin/dmidecode ${bindir}/sudo-users/dmidecode
 ln -sf /sbin/iptables ${bindir}/sudo-users/iptables
-
+ln -sf /bin/ip ${bindir}/sudo-users/ip
