--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Depends: bash (>= 3.1),
  lsof,
  coreutils (>= 5.97-5.3),
  host,
+ less
 Suggests: util-linux (>= 2.13-5),
  net-tools,
  ncurses-bin (>= 5.5-5),
