--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,7 @@ Standards-Version: 3.7.2
 
 Package: vyatta-op
 Architecture: all
-Depends: bash (>= 3.1),
- sed (>= 4.1.5),
+Depends: sed (>= 4.1.5),
  ethtool,
  ntpdate,
  procps (>= 1:3.2.7-3),
@@ -16,6 +15,7 @@ Depends: bash (>= 3.1),
  lsof,
  coreutils (>= 5.97-5.3),
  host,
+ vyatta-bash,
  less
 Suggests: util-linux (>= 2.13-5),
  net-tools,
