--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Package: vyatta-op
 Architecture: all
 Depends: sed (>= 4.1.5),
  ethtool,
+ traceroute,
  ntpdate,
  procps (>= 1:3.2.7-3),
  pciutils,
