--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,8 @@ Depends: sed (>= 4.1.5),
  coreutils (>= 5.97-5.3),
  host,
  vyatta-bash | bash (>= 3.1),
- less
+ less,
+ libio-prompt-perl
 Suggests: util-linux (>= 2.13-5),
  net-tools,
  ncurses-bin (>= 5.5-5),
