--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,8 @@ Depends: sed (>= 4.1.5),
  host,
  vyatta-bash | bash (>= 3.1),
  less,
- libio-prompt-perl
+ libio-prompt-perl,
+ at
 Suggests: util-linux (>= 2.13-5),
  net-tools,
  ncurses-bin (>= 5.5-5),
