--- a/debian/control
+++ b/debian/control
@@ -19,6 +19,7 @@ Depends: sed (>= 4.1.5),
  vyatta-bash | bash (>= 3.1),
  less,
  libio-prompt-perl,
+ ssmtp,
  at
 Suggests: util-linux (>= 2.13-5),
  net-tools,
