--- a/debian/control
+++ b/debian/control
@@ -20,9 +20,9 @@ Depends: sed (>= 4.1.5),
  vyatta-bash | bash (>= 3.1),
  less,
  libio-prompt-perl,
- at
+ at,
+ net-tools
 Suggests: util-linux (>= 2.13-5),
- net-tools,
  ncurses-bin (>= 5.5-5),
 Description: bash operational command completion
  Vyatta operational command bash completion script and base templates
