--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,6 @@ Standards-Version: 3.7.2
 
 Package: vyatta-op
 Architecture: all
-Pre-depends: ssmtp
 Depends: sed (>= 4.1.5),
  ethtool,
  traceroute,
@@ -20,6 +19,7 @@ Depends: sed (>= 4.1.5),
  vyatta-bash | bash (>= 3.1),
  less,
  libio-prompt-perl,
+ mail-transport-agent,
  at,
  net-tools,
  libtimedate-perl
