--- a/Makefile.am
+++ b/Makefile.am
@@ -21,6 +21,7 @@ bin_SCRIPTS	+= scripts/vyatta-show-bonding.pl
 bin_SCRIPTS	+= scripts/vyatta-cpu-summary.pl
 bin_SCRIPTS	+= scripts/yesno
 bin_SCRIPTS     += scripts/vyatta-gettime.pl
+bin_SCRIPTS     += scripts/show-users.pl
 
 bin_sudo_users_SCRIPTS      = scripts/vyatta-identify-interface.pl
 bin_sudo_users_SCRIPTS     += scripts/vyatta-delete-log-file.sh
