Simple SNMP operational command
show snmp
Wrapper around snmpstatus, simple way to check if server is up

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,6 +24,7 @@ bin_SCRIPTS     += scripts/vyatta-gettime.pl
 bin_SCRIPTS     += scripts/show-users.pl
 bin_SCRIPTS     += scripts/vyatta-boot-image.pl
 bin_SCRIPTS	+= scripts/vyatta-sudo
+bin_SCRIPTS	+= scripts/vyatta-show-snmp.pl
 
 bin_sudo_users_SCRIPTS      = scripts/vyatta-identify-interface.pl
 bin_sudo_users_SCRIPTS     += scripts/vyatta-delete-log-file.sh
