Fix bug 4115 'clear nat translations' does not clear nat translations * added command 'clear connection-tracking' to flush all conntrack entries

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,7 @@ bin_sudo_users_SCRIPTS     += scripts/vyatta-delete-log-file.sh
 bin_sudo_users_SCRIPTS	   += scripts/vyatta-reboot.pl
 bin_sudo_users_SCRIPTS     += scripts/vyatta-op-dns-forwarding.pl
 bin_sudo_users_SCRIPTS     += scripts/vyatta-op-dynamic-dns.pl
+bin_sudo_users_SCRIPTS     += scripts/vyatta-clear-conntrack
 
 cpiop = find  . ! -regex '\(.*~\|.*\.bak\|.*\.swp\|.*\#.*\#\)' -print0 | \
 	cpio -0pd
