--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Depends: sed (>= 4.1.5),
  ntpdate,
  procps (>= 1:3.2.7-3),
  pciutils,
+ vyatta-quagga (>= 0.99.15-26),
  lsof,
  coreutils (>= 5.97-5.3),
  host,
