Add show login commands
Bug 5554
Add CLI interface to user state commands (who, id, etc)

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,6 +28,7 @@ bin_SCRIPTS	+= scripts/rename-image.pl
 bin_SCRIPTS	+= scripts/show-image-storage.pl
 bin_SCRIPTS	+= scripts/node-exists.pl
 bin_SCRIPTS	+= scripts/vyatta-remote-copy.pl
+bin_SCRIPTS	+= scripts/vyatta-show-current-user
 
 sbin_SCRIPTS     = scripts/dhcpv6-client-show-leases.pl
 
