--- a/debian/rules
+++ b/debian/rules
@@ -70,6 +70,7 @@ binary-indep: build install
 	dh_compress
 	dh_fixperms
 	dh_installdeb
+	rm -f debian/*/DEBIAN/conffiles
 	if [ -f "../.VYATTA_DEV_BUILD" ]; then \
 		dh_gencontrol -- -v999.dev; \
 	else \
