correctly handle renamed file (cherry picked from commit 9fb4fcd4c4509772cd36bb9f547b544ec3b91cda)

--- a/debian/vyatta-op.postinst.in
+++ b/debian/vyatta-op.postinst.in
@@ -10,3 +10,7 @@ ln -sf /opt/vyatta/sbin/vyatta-interfaces.pl ${bindir}/sudo-users/vyatta-interfa
 
 # rm symlink for sendmail that was added by ssmtp package
 rm -f /usr/sbin/sendmail
+
+# handle renamed file (not automatically deleted since it was "conffile")
+rm -f /etc/bash_completion.d/10vyatta-op
+
