--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Depends: sed (>= 4.1.5),
  procps (>= 1:3.2.7-3),
  pciutils,
  vyatta-cfg (>= 0.16.26),
+ vyatta-cfg-system (>= 0.19.93),
  vyatta-quagga (>= 0.99.15-26),
  lsof,
  coreutils (>= 5.97-5.3),
