Generate unpriviledged allowed-op at compile time. Add script to allow admin user to regenerate it if needed. Fix ambiguous command message.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,7 @@ completiondir	 = /etc/bash_completion.d
 completion_DATA	 = etc/bash_completion.d/vyatta-op
 opdir		 = $(datadir)/vyatta-op/templates
 bin_sudo_usersdir = $(bindir)/sudo-users
+etc_shell_leveldir = $(sysconfdir)/shell/level
 
 funcdir		 = $(datadir)/vyatta-op/functions
 func_DATA	 = functions/tech-support
@@ -11,8 +12,10 @@ func_DATA	+= functions/tech-support-brief
 
 interpdir = $(datadir)/vyatta-op/functions/interpreter
 interp_DATA = functions/interpreter/vyatta-op-run
+interp_DATA += functions/interpreter/vyatta-unpriv
 interp_DATA += functions/interpreter/vyatta-common
 interp_DATA += functions/interpreter/vyatta-image-complete
+
 
 bin_SCRIPTS	 = scripts/vyatta-show-interfaces
 bin_SCRIPTS	+= scripts/vyatta-show-interfaces.pl
@@ -39,6 +42,7 @@ bin_SCRIPTS	+= scripts/vyatta-op-cmd-wrapper
 
 sbin_SCRIPTS     = scripts/dhcpv6-client-show-leases.pl
 sbin_SCRIPTS    += scripts/vyatta-image-tools.pl
+sbin_SCRIPTS    += scripts/vyatta-regen-unpriv-commands.sh
 
 bin_sudo_users_SCRIPTS      = scripts/vyatta-identify-interface.pl
 bin_sudo_users_SCRIPTS     += scripts/vyatta-delete-log-file.sh
@@ -47,9 +51,14 @@ bin_sudo_users_SCRIPTS     += scripts/vyatta-op-dns-forwarding.pl
 bin_sudo_users_SCRIPTS     += scripts/vyatta-op-dynamic-dns.pl
 bin_sudo_users_SCRIPTS     += scripts/vyatta-clear-conntrack
 
+all-local:
+	./gen-unpriv-commands.sh
+
 cpiop = find  . ! -regex '\(.*~\|.*\.bak\|.*\.swp\|.*\#.*\#\)' -print0 | \
 	cpio -0pd
 
 install-exec-hook:
 	mkdir -p $(DESTDIR)$(opdir)
 	cd templates; $(cpiop) $(DESTDIR)$(opdir)
+	mkdir -p $(DESTDIR)$(etc_shell_leveldir)
+	cd etc/shell/level; $(cpiop) $(DESTDIR)$(etc_shell_leveldir)
