--- a/Makefile.am
+++ b/Makefile.am
@@ -34,7 +34,7 @@ bin_SCRIPTS	+= scripts/tech-support-archive
 bin_SCRIPTS	+= scripts/vyatta-op-cmd-wrapper
 
 sbin_SCRIPTS     = scripts/dhcpv6-client-show-leases.pl
-sbin_SCRIPTS     = scripts/vyatta-image-tools.pl
+sbin_SCRIPTS    += scripts/vyatta-image-tools.pl
 
 bin_sudo_users_SCRIPTS      = scripts/vyatta-identify-interface.pl
 bin_sudo_users_SCRIPTS     += scripts/vyatta-delete-log-file.sh
