Create new ping command with the following semantics
    1. ping <ipv4|ipv6|hostname> will use
      * ping for a v4 address
      * ping6 for a v6 address
      * ping or ping6 for a hostname which ever resolves prefering ipv4
    2. ping ipv4 <ipv4|hostname> will ping
    3. ping ipv6 <ipv6|hostname> will ping6
    4. ping <node> option <advanced ping options>
       * allows for options to pass down to ping
       * this is a stop gap while we add the most common options
       * to the CLI

--- a/Makefile.am
+++ b/Makefile.am
@@ -39,6 +39,7 @@ bin_SCRIPTS	+= scripts/vyatta-remote-copy.pl
 bin_SCRIPTS	+= scripts/vyatta-show-current-user
 bin_SCRIPTS	+= scripts/tech-support-archive
 bin_SCRIPTS	+= scripts/vyatta-op-cmd-wrapper
+bin_SCRIPTS += scripts/vyatta-ping
 
 sbin_SCRIPTS     = scripts/dhcpv6-client-show-leases.pl
 sbin_SCRIPTS    += scripts/vyatta-image-tools.pl
