Update operator level user top level commands to reflect changes in the command structure

--- a/etc/shell/level/users/allowed-op.in
+++ b/etc/shell/level/users/allowed-op.in
@@ -1,20 +1,15 @@
 clear
 connect
-debug
 delete
 disconnect
 exit
 force
-no
+monitor
 ping
-ping6
 release
 renew
 set
 show
 telnet
-terminal
 traceroute
-traceroute6
-undebug
 update
