Add console keymap reconfigure op-mode command
Bug 7448
This adds template for the Debian way to reconfigure console keymap.

Note: although this is an op-mode command, it really persists across
reboot since it changes the package keymap. There isn't a good method
to put this in Vyatta config since the debian package configuration
is interactive and prompts user for keyboard type and options.

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Standards-Version: 3.7.2
 Package: vyatta-op
 Architecture: all
 Depends: sed (>= 4.1.5),
+ console-setup, console-terminus,
  ethtool,
  traceroute,
  ntpdate,
