--- a/debian/control
+++ b/debian/control
@@ -30,5 +30,6 @@ Depends: sed (>= 4.1.5),
 Replaces: vyatta-serial
 Suggests: util-linux (>= 2.13-5),
  ncurses-bin (>= 5.5-5),
+ dialog
 Description: bash operational command completion
  Vyatta operational command bash completion script and base templates
