Add dendencies for bugfix 4053 to debian/control

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,8 @@ Package: vyatta-op
 Architecture: all
 Depends: sed (>= 4.1.5),
  console-setup, console-terminus,
+ bmon, 
+ iftop,
  ethtool,
  traceroute,
  ntpdate,
