Add new ping command script
Bug 3052
Rather than having a ping an op-mode command which has no flexibility
about arguments. Make it a wrapper script that accepts Juniper style
arguments and turns them into Unix style flags.

--- a/Makefile.am
+++ b/Makefile.am
@@ -40,7 +40,7 @@ bin_SCRIPTS	+= scripts/vyatta-remote-copy.pl
 bin_SCRIPTS	+= scripts/vyatta-show-current-user
 bin_SCRIPTS	+= scripts/tech-support-archive
 bin_SCRIPTS	+= scripts/vyatta-op-cmd-wrapper
-bin_SCRIPTS += scripts/vyatta-ping
+bin_SCRIPTS += scripts/ping
 bin_SCRIPTS += scripts/vyatta-traceroute
 bin_SCRIPTS += scripts/vyatta-monitor
 bin_SCRIPTS += scripts/vyatta-monitor-list
