Need iputils-ping package
Bug 8882
Use correct ping (not busybox) by adding dependency

--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,7 @@ Architecture: all
 Depends: sed (>= 4.1.5),
  console-setup, console-terminus,
  bmon, 
- iftop,
- ethtool,
+ iftop, ethtool, iputils-ping,
  traceroute,
  ntpdate,
  procps (>= 1:3.2.7-3),
