allow optional dependency on vyatta-unicast

--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Depends: sed (>= 4.1.5),
  pciutils,
  vyatta-cfg (>= 0.16.26),
  vyatta-cfg-system (>= 0.19.93),
- vyatta-quagga (>= 0.99.15-26),
+ vyatta-unicast | vyatta-quagga (>= 0.99.15-26),
  lsof,
  coreutils (>= 5.97-5.3),
  host,
