Add Maya calendar support to date commands for planning system maintenance rituals. ;)

--- a/Makefile.am
+++ b/Makefile.am
@@ -51,6 +51,7 @@ bin_SCRIPTS += scripts/vyatta-monitor-background-stop
 bin_SCRIPTS += scripts/vyatta-monitor-check-rule-log
 bin_SCRIPTS += scripts/vyos-show-ram.sh
 bin_SCRIPTS += scripts/vyos-strip-config.pl
+bin_SCRIPTS += scripts/maya-date.py
 
 sbin_SCRIPTS     = scripts/dhcpv6-client-show-leases.pl
 sbin_SCRIPTS    += scripts/vyatta-image-tools.pl
