Replace the old hypervisor_vendor utility with hvinfo.

--- a/debian/control
+++ b/debian/control
@@ -30,7 +30,8 @@ Depends: sed (>= 4.1.5),
  net-tools,
  libtimedate-perl,
  usbutils,
- lsscsi
+ lsscsi,
+ hvinfo
 Replaces: vyatta-serial
 Suggests: util-linux (>= 2.13-5),
  ncurses-bin (>= 5.5-5),
