--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: contrib/net
 Priority: extra
 Maintainer: VyOS Package Maintainers <maintainers@vyos.net>
 Build-Depends: debhelper (>= 5), autotools-dev
-Standards-Version: 3.7.2
+Standards-Version: 3.9.1
 
 Package: vyatta-op
 Architecture: all
@@ -18,7 +18,7 @@ Depends: sed (>= 4.1.5),
  pciutils,
  vyatta-cfg (>= 0.16.26),
  vyatta-cfg-system (>= 0.19.93),
- vyatta-unicast | vyatta-quagga (>= 0.99.15-26),
+ vyatta-quagga (>= 0.99.15-26),
  lsof,
  coreutils (>= 5.97-5.3),
  host,
@@ -32,9 +32,8 @@ Depends: sed (>= 4.1.5),
  usbutils,
  lsscsi,
  hvinfo
-Replaces: vyatta-serial
 Suggests: util-linux (>= 2.13-5),
  ncurses-bin (>= 5.5-5),
  dialog
-Description: bash operational command completion
- Vyatta operational command bash completion script and base templates
+Description: VyOS operational commands and completion scripts
+ VyOS operational command bash completion script and base templates
