--- a/debian/rules
+++ b/debian/rules
@@ -71,7 +71,7 @@ binary-indep: build install
 	dh_fixperms
 	dh_installdeb
 	rm -f debian/*/DEBIAN/conffiles
-	if [ -f "../.VYATTA_DEV_BUILD" ]; then \
+	if [ -f "../.VYOS_DEV_BUILD" ]; then \
 		dh_gencontrol -- -v999.dev; \
 	else \
 		dh_gencontrol; \
