--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: vyatta-op
 Section: contrib/net
 Priority: extra
 Maintainer: VyOS Package Maintainers <maintainers@vyos.net>
-Build-Depends: debhelper (>= 5), autotools-dev
+Build-Depends: debhelper (>= 5), autotools-dev, autoconf, automake,
+ cpio
 Standards-Version: 3.9.1
 
 Package: vyatta-op
