New implementation of the version display command (ref T6).

--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,8 @@ Depends: sed (>= 4.1.5),
  libtimedate-perl,
  usbutils,
  lsscsi,
- hvinfo
+ hvinfo,
+ python-pystache
 Suggests: util-linux (>= 2.13-5),
  ncurses-bin (>= 5.5-5),
  dialog
