--- a/etc/default/vyatta.in
+++ b/etc/default/vyatta.in
@@ -26,57 +26,73 @@ unset _vyatta_extglob
     if test -z "$vyatta_prefix" ; then
 	if test -n "@prefix@" ; then
 	    declare -x -r vyatta_prefix=@prefix@
+            declare -x -r vyos_prefix=@prefix@
 	else
 	    declare -x -r vyatta_prefix=/opt/vyatta
+            declare -x -r vyos_prefix=/opt/vyatta
 	fi
     fi
     if test -z "$vyatta_exec_prefix" ; then
 	if test -n "@exec_prefix@" ; then
 	    declare -x -r vyatta_prefix=@exec_prefix@
+            declare -x -r vyos_prefix=@exec_prefix@
 	else
 	    declare -x -r vyatta_prefix=$vyatta_prefix
+            declare -x -r vyos_prefix=$vyatta_prefix
 	fi
     fi
     if test -z "$vyatta_datarootdir" ; then
 	if test -n "@datarootdir@" ; then
 	    declare -x -r vyatta_datarootdir=@datarootdir@
+            declare -x -r vyos_datarootdir=@datarootdir@
 	else
 	    declare -x -r vyatta_datarootdir=$vyatta_prefix/share
+            declare -x -r vyos_datarootdir=$vyatta_prefix/share
 	fi
     fi
     if test -z "$vyatta_bindir" ; then
 	if test -n "@bindir@" ; then
 	    declare -x -r vyatta_bindir=@bindir@
+            declare -x -r vyos_bindir=@bindir@
 	else
 	    declare -x -r vyatta_bindir=$vyatta_exec_prefix/bin
+            declare -x -r vyos_bindir=$vyatta_exec_prefix/bin
 	fi
     fi
     if test -z "$vyatta_sbindir" ; then
 	if test -n "@sbindir@" ; then
 	    declare -x -r vyatta_sbindir=@sbindir@
+            declare -x -r vyos_sbindir=@sbindir@
 	else
 	    declare -x -r vyatta_sbindir=$vyatta_exec_prefix/sbin
+            declare -x -r vyos_sbindir=$vyatta_exec_prefix/sbin
 	fi
     fi
     if test -z "$vyatta_libdir" ; then
 	if test -n "@libdir@" ; then
 	    declare -x -r vyatta_libdir=@libdir@
+            declare -x -r vyos_libdir=@libdir@
 	else
 	    declare -x -r vyatta_libdir=$vyatta_exec_prefix/lib
+            declare -x -r vyos_libdir=$vyatta_exec_prefix/lib
 	fi
     fi
     if test -z "$vyatta_libexecdir" ; then
 	if test -n "@libexecdir@" ; then
 	    declare -x -r vyatta_libexecdir=@libexecdir@
+            declare -x -r vyos_libexecdir=@libexecdir@
 	else
 	    declare -x -r vyatta_libexecdir=$vyatta_exec_prefix/libexec
+            declare -x -r vyos_libexecdir=$vyatta_exec_prefix/libexec
 	fi
     fi
     if test -z "$vyatta_datadir" ; then
 	if test -n "@datadir@" ; then
 	    declare -x -r vyatta_datadir=@datadir@
+            declare -x -r vyos_datadir=@datadir@
 	else
 	    declare -x -r vyatta_datadir=$vyatta_datarootdir
+            declare -x -r vyos_datadir=$vyatta_datarootdir
 	fi
     fi
     if test -z "$vyatta_htmldir" ; then
@@ -131,12 +147,15 @@ unset _vyatta_extglob
 
     if test -z "$vyatta_op_templates" ; then
 	declare -x -r vyatta_op_templates=$vyatta_datadir/vyatta-op/templates
+        declare -x -r vyos_op_templates=$vyatta_datadir/vyatta-op/templates
     fi
     if test -z "$vyatta_cfg_templates" ; then
 	declare -x -r vyatta_cfg_templates=$vyatta_datadir/vyatta-cfg/templates
+        declare -x -r vyos_cfg_templates=$vyatta_datadir/vyatta-cfg/templates
     fi
     if test -z "$vyatta_configdir" ; then
 	declare -x -r vyatta_configdir=$vyatta_prefix/config
+        declare -x -r vyos_configdir=$vyatta_prefix/config
     fi
 
     for var in prefix exec_prefix datarootdir ; do
