--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Depends: sed (>= 4.1.5),
  procps (>= 1:3.2.7-3),
  vyatta-cfg (>= 0.16.26),
  vyatta-cfg-system (>= 0.19.93),
- vyatta-quagga (>= 0.99.15-26),
+ vyatta-quagga (>= 0.99.15-26) | frr (>=5.1),
  coreutils (>= 5.97-5.3),
  host,
  vyatta-bash | bash (>= 4.1),
