Debian: T2095: add missing dependency on rsync

--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Depends: sed (>= 4.1.5),
  libio-prompt-perl,
  mail-transport-agent,
  at,
+ rsync,
  net-tools,
  libtimedate-perl,
 Suggests: util-linux (>= 2.13-5),
