--- a/Makefile.am
+++ b/Makefile.am
@@ -44,8 +44,7 @@ sbin_SCRIPTS    += scripts/vyatta-image-tools.pl
 sbin_SCRIPTS    += scripts/vyatta-regen-unpriv-commands.sh
 sbin_SCRIPTS    += scripts/vyos-openvpn-remoteconfig.pl
 
-bin_sudo_users_SCRIPTS      = scripts/vyatta-identify-interface.pl
-bin_sudo_users_SCRIPTS     += scripts/vyatta-delete-log-file.sh
+bin_sudo_users_SCRIPTS     = scripts/vyatta-delete-log-file.sh
 
 all-local:
 	./gen-unpriv-commands.sh
