T671: remove scripts that are either unused or about to be replaced
(cherry picked from commit 2f92b8bbb1b1042ff14918af3495c86f8b0c7870)

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,8 +17,7 @@ interp_DATA += functions/interpreter/vyatta-common
 interp_DATA += functions/interpreter/vyatta-image-complete
 
 
-bin_SCRIPTS	 = scripts/vyatta-show-interfaces
-bin_SCRIPTS	+= scripts/vyatta-show-interfaces.pl
+bin_SCRIPTS = scripts/vyatta-show-interfaces.pl
 bin_SCRIPTS += scripts/show-dhcp-leases.pl
 bin_SCRIPTS += scripts/vyatta-boot-image.pl
 bin_SCRIPTS	+= scripts/rename-image.pl
@@ -27,9 +26,6 @@ bin_SCRIPTS	+= scripts/tech-support-archive
 bin_SCRIPTS	+= scripts/vyatta-op-cmd-wrapper
 
 sbin_SCRIPTS     = scripts/vyatta-image-tools.pl
-sbin_SCRIPTS    += scripts/vyos-openvpn-remoteconfig.pl
-
-bin_sudo_users_SCRIPTS     = scripts/vyatta-delete-log-file.sh
 
 all-local:
 	./gen-unpriv-commands.sh
