Revert "T5461: Improve rootfs directory variable"
This reverts commit 6b03f6864063bc0ab95191b8c5e418d482baf076.

(cherry picked from commit e8cf7aadfa68f64fd15c971ded1209fab9aa96c0)

--- a/etc/default/vyatta.in
+++ b/etc/default/vyatta.in
@@ -177,8 +177,8 @@ unset _vyatta_extglob
     fi
 
     if test -z "$vyos_rootfs_dir" ; then
-        IMAGE_NAME=$(cat /proc/cmdline | sed -e s+^.*vyos-union=/boot/++ | sed -e 's/ .*$//')
-        declare -x -r vyos_rootfs_dir="/usr/lib/live/mount/rootfs/${IMAGE_NAME}.squashfs"
+        ROOTFS=$(mount -t squashfs | cut -d' ' -f3)
+        declare -x -r vyos_rootfs_dir="${ROOTFS}"
     fi
 
     if test -z "$VRF" ; then
